assets/styles/elements/octogram.header.css
body .page .header {
  width: 100%;
  height: var(--header-height);
  background: linear-gradient(
    var(--header-bg),
    var(--introduction-bg)
  );
  display: flex;
  align-items: center;
  justify-content: center;
}

body.as-error .header {
  background: linear-gradient(
    var(--header-bg),
    var(--background)
  );
}

body .page .header .content {
  height: 100%;
  width: 100%;
  max-width: var(--header-width-limit);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

body .page .header .content .applogo {
  display: flex;
  align-items: center;
  justify-content: center;
}

body .page .header .content .applogo img {
  height: var(--header-appicon-size);
  width: var(--header-appicon-size);
  filter: var(--icons-transform);
}

body .page .header .content a.applogo img.arrow {
  height: var(--header-back-size);
  width: var(--header-back-size);
  margin-right: var(--header-back-gap);
  transition: var(--animations-duration) transform, var(--animations-duration) margin-right, var(--animations-duration) opacity;
}

body .page .header:not(:hover) .content a.applogo img.arrow {
  transform: scale(0.8);
  margin-right: calc(var(--header-back-size) * -1);
  opacity: 0;
}

body .page .header .content .actions {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--header-actions-gap);
}

@media screen and (max-width: 500px) {
  body .page .header .content .actions .button.secondary {
    display: none;
  }
}

